--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <h1>Cierre del curso de Git</h1>
+      <section>
+        <div class="row">
+          <div class="col">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore quam, aliquam perspiciatis, iure eius deleniti, molestias explicabo ducimus porro vel praesentium quod quae reiciendis suscipit accusamus ad maxime voluptatem eos.
+          </div>
+          <div class="col">
+            <h2>Este es mi hola mundo</h2>
+          </div>
+        </div>
+      </section>
+  
+      </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
